STM11/STM/.metadata/.plugins/org.eclipse.cdt.ui/zy.build.log
00:27:22 **** Incremental Build of configuration Debug for project zy ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/stm32f1xx_it.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f1xx_it.d" -MT"Core/Src/stm32f1xx_it.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/stm32f1xx_it.o"
../Core/Src/stm32f1xx_it.c: In function 'USART1_IRQHandler':
../Core/Src/stm32f1xx_it.c:255:23: error: 'RTx_Data' undeclared (first use in this function); did you mean 'pRx_Data'?
  255 |            pRx_Data = RTx_Data;
      |                       ^~~~~~~~
      |                       pRx_Data
../Core/Src/stm32f1xx_it.c:255:23: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:43: Core/Src/stm32f1xx_it.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

00:27:22 Build Failed. 2 errors, 0 warnings. (took 318ms)

